--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <em>Beverly, Illinois</em>
         </div>
         <div class="carousel-item container-fluid">
-          <h2 class="testimonial-text">Ivy- That's my dawg 4 life, word to X! Newton- It's just me & my bitch, doggy-dog!</h2>
+          <h2 class="testimonial-text">Ivy- That's my dawg 4 life, word to DMX! Newton- It's just me & my bitch, doggy-dog!</h2>
           <img class="testimonial-image" src="images/newtonivy-img.png" alt="dogscouple-profile">
           <em>Newton & Ivy, Montreal</em>
         </div>
